[package]
name = "irodori-extension-athena"
version = "0.1.2"
edition = "2021"
license = "MIT OR 0BSD"
description = "Native Irodori Table connector extension for Athena."
repository = "https://github.com/hjosugi/irodori-extension-athena"
readme = "README.md"
include = [
  "Cargo.toml",
  "Cargo.lock",
  "README.md",
  "LICENSE-*",
  "connector.config.json",
  "connector.source.json",
  "irodori.extension.json",
  "src/**",
  "native/source/**",
]

[lib]
name = "irodori_extension_athena"
crate-type = ["cdylib", "rlib"]

[dependencies]
irodori-connector-abi = { git = "https://github.com/hjosugi/irodori-kit", tag = "v0.6.0" }
aws-config = "1"
aws-credential-types = "1"
aws-sdk-athena = "1"
aws-types = "1"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }

[profile.dev.package."*"]
debug = 0

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
